fix: fix some missing file or error from lost data
