# docs/swagger.json
@@ -5,7 +5,7 @@
         "license": {}
     },
     "paths": {
-        "/api/v1/batiks": {
+        "/batiks": {
             "get": {
                 "description": "Get All Batik",
                 "consumes": [
@@ -71,7 +71,7 @@
                 }
             }
         },
-        "/api/v1/batiks/{batikId}": {
+        "/batiks/{batikId}": {
             "get": {
                 "description": "Get Batik By ID",
                 "consumes": [
@@ -138,7 +138,7 @@
                 }
             }
         },
-        "/api/v1/islands": {
+        "/islands": {
             "get": {
                 "description": "Get All Island",
                 "consumes": [
@@ -190,7 +190,7 @@
                 }
             }
         },
-        "/api/v1/islands/{islandId}": {
+        "/islands/{islandId}": {
             "get": {
                 "description": "Get Island By ID",
                 "consumes": [
@@ -257,7 +257,7 @@
                 }
             }
         },
-        "/api/v1/provinces": {
+        "/provinces": {
             "get": {
                 "description": "Get All Province",
                 "consumes": [
@@ -309,7 +309,7 @@
                 }
             }
         },
-        "/api/v1/provinces/{provinceId}": {
+        "/provinces/{provinceId}": {
             "get": {
                 "description": "Get Province By ID",
                 "consumes": [
@@ -376,7 +376,7 @@
                 }
             }
         },
-        "/api/v1/quizzes": {
+        "/quizzes": {
             "get": {
                 "security": [
                     {
@@ -439,7 +439,7 @@
                 }
             }
         },
-        "/api/v1/quizzes/check": {
+        "/quizzes/check": {
             "post": {
                 "security": [
                     {
@@ -513,7 +513,7 @@
                 }
             }
         },
-        "/api/v1/users/forgot-password": {
+        "/users/forgot-password": {
             "post": {
                 "description": "Forgot Password",
                 "consumes": [
@@ -570,7 +570,7 @@
                 }
             }
         },
-        "/api/v1/users/login": {
+        "/users/login": {
             "post": {
                 "description": "Login User",
                 "consumes": [
@@ -639,7 +639,7 @@
                 }
             }
         },
-        "/api/v1/users/oauth": {
+        "/users/oauth": {
             "get": {
                 "description": "Oauth Login",
                 "consumes": [
@@ -673,7 +673,7 @@
                 }
             }
         },
-        "/api/v1/users/oauth/callback": {
+        "/users/oauth/callback": {
             "get": {
                 "description": "Oauth Callback",
                 "consumes": [
@@ -695,7 +695,7 @@
                 }
             }
         },
-        "/api/v1/users/register": {
+        "/users/register": {
             "post": {
                 "description": "Register User",
                 "consumes": [
@@ -764,7 +764,7 @@
                 }
             }
         },
-        "/api/v1/users/reset-password/{resetPasswordToken}": {
+        "/users/reset-password/{resetPasswordToken}": {
             "post": {
                 "description": "Reset Password",
                 "consumes": [
@@ -828,7 +828,7 @@
                 }
             }
         },
-        "/api/v1/users/{userId}": {
+        "/users/{userId}": {
             "get": {
                 "security": [
                     {
@@ -942,6 +942,9 @@
         "domain.BatikResponse": {
             "type": "object",
             "properties": {
+                "city": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -949,6 +952,9 @@
                     "type": "integer"
                 },
                 "island": {
+                    "type": "string"
+                },
+                "java_name": {
                     "type": "string"
                 },
                 "link_image": {
@@ -1021,6 +1027,12 @@
                 },
                 "question": {
                     "type": "string"
+                },
+                "user_quiz": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.UserAnswer"
+                    }
                 }
             }
         },
@@ -1028,10 +1040,14 @@
             "type": "object",
             "required": [
                 "confirm_password",
+                "forgot_password_token",
                 "password"
             ],
             "properties": {
                 "confirm_password": {
+                    "type": "string"
+                },
+                "forgot_password_token": {
                     "type": "string"
                 },
                 "password": {
@@ -1066,7 +1082,36 @@
                 "tier": {
                     "type": "string"
                 },
+                "user_quiz": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.UserAnswer"
+                    }
+                },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.UserAnswer": {
+            "type": "object",
+            "properties": {
+                "quiz_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "total_correct_answer": {
+                    "type": "integer"
+                },
+                "user_answer": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "user_id": {
                     "type": "string"
                 }
             }
